@@ -8,6 +8,7 @@ CHANGELOG Roundcube Webmail
 - Fix responses list update issue after response name change (#1490555)
 - Fix bug where message preview was unintentionally reset on check-recent action (#1490563)
 - Fix bug where HTML messages with invalid/excessive css styles couldn't be displayed (#1490539)
+- Fix redundant blank lines when using HTML and top posting (#1490576)
 
 RELEASE 1.1.3
 -------------
